--- a/docbuild/api/Scrapbook101core.Controllers.ItemController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.ItemController.yml
@@ -25,7 +25,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ItemController
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 17
@@ -38,7 +38,9 @@ items:
     content: 'public class ItemController : Controller, IActionFilter, IAsyncActionFilter, IFilterMetadata, IDisposable'
     content.vb: >-
       Public Class ItemController
+
           Inherits Controller
+
           Implements IActionFilter, IAsyncActionFilter, IFilterMetadata, IDisposable
   inheritance:
   - System.Object
@@ -267,7 +269,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: .ctor
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 21
@@ -300,7 +302,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: IndexAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 33
@@ -352,7 +354,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DetailsAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 56
@@ -400,7 +402,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 70
@@ -445,7 +447,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 87
@@ -507,7 +509,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: EditAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 141
@@ -562,7 +564,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: EditAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 166
@@ -624,7 +626,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DeleteAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 210
@@ -679,7 +681,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DeleteConfirmedAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 228
