--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -288,7 +288,7 @@
           "hash": "/mR+fN2iOujyXqNGl42N3k+4r2vnksrKtVmifbu3mVc="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -369,10 +369,10 @@
       "output": {
         ".html": {
           "relative_path": "articles/github-actions.html",
-          "hash": "c4lZxa2GLxKU8sEGedC2ahvkR+anBlPtW2OvikUHGyg="
+          "hash": "vK0Ead4BRpbSdpF6uPRok3iTngHNUeMcmvLt8DdlqHQ="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -584,7 +584,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 15,
-          "skipped_file_count": 15
+          "skipped_file_count": 14
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
